[project]
name = "size-match-compositing-nodes"
description = "Match image/mask sizes with various methods. Paste images/masks on top of eachother."
version = "1.0.2"
license = "LICENSE"
dependencies = []

[project.urls]
Repository = "https://github.com/christian-byrne/size-match-compositing-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "christian-byrne"
DisplayName = "Image/Mask Size Matching and Simple Compositing"
Icon = "https://img.icons8.com/?size=100&id=46251&format=png&color=000000"
